--- a/resources/assets/less/_app.less
+++ b/resources/assets/less/_app.less
@@ -1,8 +1,14 @@
-
-img{
-width:1250px;
-height:600px;
+html{
+   background: url('/images/maglic.jpg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
+body{
+
+}
+
 div.search {
 position:absolute;
 top: 47%;
