--- a/public/css/_app.css
+++ b/public/css/_app.css
@@ -6,19 +6,22 @@ body {
   /* Background image doesn't tile */
   background-repeat: no-repeat;
   /* Background image is fixed in the viewport so that it doesn't move when 
-     the content's height is greater than the image's height */
+the content's height is greater than the image's height */
   background-attachment: fixed;
   /* This is what makes the background image rescale based
-     on the container's size */
+on the container's size */
   background-size: cover;
   /* Set a background color that will be displayed
-     while the background image is loading */
+while the background image is loading */
   background-color: #464646;
 }
-div.search {
+form.search {
   position: absolute;
   top: 47%;
-  left: 40%;
+  left: 33%;
+}
+span.middle-text {
+  color: #ffffff;
 }
 .tt-query {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
