--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,11 +1,62 @@
-html,
 body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
+  background-image: url('/images/maglic.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: #464646;
 }
-#map {
-  height: 100%;
+div.search {
+  text-align: centar;
+  position: absolute;
+  top: 47%;
+  left: 33%;
+}
+span.middle-text {
+  color: #ffffff;
+}
+div.header-title {
+  font-size: 60px;
+  font-family: 'Open Sans Condensed', sans-serif;
+  margin-top: 8%;
+  text-align: center;
+  color: #BB0000;
+  font-weight: 100;
+}
+.tt-query {
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+.tt-hint {
+  color: #999;
+}
+.tt-menu {
+  width: 100%;
+  margin-top: 4px;
+  padding: 4px 0;
+  background-color: #292626;
+  color: #fff;
+  cursor: pointer;
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+.tt-suggestion {
+  padding: 3px 20px;
+  line-height: 24px;
+}
+.tt-suggestion.tt-cursor {
+  color: #fff;
+  background-color: #0097cf;
+}
+.tt-suggestion:hover {
+  color: yellow;
+}
+.tt-suggestion p {
+  margin: 0;
+}
+.tt-input {
+  vertical-align: inherit!important;
 }
 
 /*# sourceMappingURL=app.css.map */
