--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,10 +1,9 @@
-body {
+body.index {
   background-image: url('/images/maglic.jpg');
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  background-color: #464646;
 }
 div.search {
   text-align: centar;
@@ -57,6 +56,9 @@ div.header-title {
 }
 .tt-input {
   vertical-align: inherit!important;
+}
+.google-map-modal-dialog {
+  width: 90%!important;
 }
 
 /*# sourceMappingURL=app.css.map */
