--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,11 +1,10 @@
 
-body {
+body.index {
     background-image: url('/images/maglic.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    background-color: #464646;
 }
 
 div.search {
@@ -72,4 +71,7 @@ color: #999
 
 .tt-input{
     vertical-align:inherit!important;
+}
+.google-map-modal-dialog{
+    width:90%!important;
 }
